[package]
name = "snow-scanner-worker"
version = "0.1.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.81.0"  # MSRV
description = "The CLI to run a snow-scanner worker"

[[bin]]
name = "snow-scanner-worker"
path = "worker.rs"

[lib]
name = "snow_scanner_worker"
path = "mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.24.0", default-features = true, features = ["native-tls"] }
rocket.workspace = true
rocket_ws.workspace = true
log2 = "0.1.11"
diesel.workspace = true
dns-ptr-resolver.workspace = true
hickory-resolver.workspace = true
chrono.workspace = true
uuid.workspace = true
cidr.workspace = true
serde.workspace = true
serde_json.workspace = true
weighted-rs.workspace = true
rayon = "1.10.0"
rand = "0.8.5"
